Implemented Refresh Tokens on the project
